refactor: use audit aware reader for exporting